# dbt-dagster

./: .gitignore  README.md  assets.py  readme.md  requirements.txt
car_data/: README.md  pyproject.toml  setup.cfg  setup.py
car_data/car_data/: assets.py  definitions.py
car_data/data/: car_data.duckdb  carprice.csv
dagster-dbt-poc/: docker-compose.yml  requirements.txt  setup.py  workspace.yml
dagster-dbt-poc/dagster_dbt_poc/: __init__.py  assets.py  repository.py
dagster-dbt-poc/dagster_project/assets/: dbt_assets.py  python_transformations.py  raw_data.py
dagster-dbt-poc/dagster_project/jobs/: etl_job.py
dagster-dbt-poc/dagster_project/resources/: database.py
dagster-dbt-poc/dbt_project/: analytics.duckdb  dbt_project.yml  profiles.yml
dagster-dbt-poc/dbt_project/models/marts/: customer_summary.sql
dagster-dbt-poc/dbt_project/models/staging/: _staging.yml  stg_customers.sql  stg_hello_world.sql
dagster-dbt-poc/dbt_project/seeds/: raw_customers.csv  raw_users.csv
dagster-dbt-poc/docker/: Dockerfile.dagster  Dockerfile.postgres  init-db.sql
dagster-demo/: assets.py  requirements.txt
dagster-demo/dbt_core_demo/: dbt_project.yml
dbt-dagster-env/: pyvenv.cfg
dbt-dagster-env/Scripts/: activate  activate.bat  daff.py
